public/css/style.css
@import "fonts.css";

/* General Styles */
/* ============== */
h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight:400;
	margin-bottom:0;
}
h1 {
	margin-top:25px;
	margin-bottom:20px;
}

h2 {
  margin-bottom: 10px;
}

.muted {
  color: #caccc7;
}

.full-width {
	margin: 0 -500%;
  padding: 0.5em 500%;
}

.popup {
	cursor:pointer;
}

table {
	font-size:15px;
}
table tr.queued td,
table tr.queued th {
	opacity:0.3;
}
table tr.queued:hover td,
table tr.queued:hover th {
	opacity:1;
}

i[class*='icon-'] {
  text-decoration: none;
}
  
.tooltip-inner {
  max-width: 350px;
}
  
ul.icons {
	margin:0;
}
ul.icons li {
	display:inline-block;
	width:22px;
	height:22px;
	line-height:22px;
	text-align:center;
}
ul.availability.icons li {
	background-color:#CCC;
	color:#FFF;
  margin: -1px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
}
ul.availability.icons li.yes {
	background-color:#66ae1e;
}
ul.availability.icons li.no {
	background-color:#dd3d3a;
}
ul.availability.icons li.maybe {
	background-color:#f9b339;
}
ul.availability.icons li .text {
	display:none;
}

ul.availability.icons.mini li {
	width:5px;
	-webkit-border-radius: 1px;
	-moz-border-radius: 1px;
	border-radius: 1px;
}
ul.availability.icons.mini li i {
	display:none;
}

.icons-nodata {
  color: #333333;
}

.key {
	display:inline-block;
	padding-top:0;
	padding-bottom:9px;
}
.key h5 {
	display:inline-block;
	margin-right:10px;
}
.key ul {
	margin:0;
	display:inline-block;
}
.key ul li {
	display:inline-block;
	border-left:solid 16px #000;
	line-height:16px;
	padding-left:5px;
	padding-right:10px;
}
.key.availability ul li {
	border-left-color:#CCC;
}
.key.availability ul li.maybe {
	border-left-color:#f9b339;
}
.key.availability ul li.yes {
	border-left-color:#66ae1e;
}
.key.availability ul li.no {
	border-left-color:#dd3d3a;
}


/* Layout */
/* ====== */
html {
  overflow-x: hidden;
	background-color: #edeeec;
}

.navbar {
	background-image: url(stripes.png);
	background-repeat: repeat;
	background-position: center top;
	border-bottom-style:solid;
	border-bottom-width:2px;
	border-bottom-color:#2b2a2a;
}
.navbar .navbar-inner {
	background-image: url(header-map.png);
	background-repeat: no-repeat;
	background-position: center top;
	background-color:transparent;
	height:70px;
	line-height:70px;
	-webkit-box-shadow: 0px 0px 0px 0px ;
  box-shadow: 0px 0px 0px 0px ;
	border:none;
	filter:none;
}
.navbar .navbar-inner .brand {
	padding: 0px 20px 0px 26px;
	background-image: url(logo-icon.png);
	background-repeat: no-repeat;
	background-position: left 18px;
	margin:0px;
	color:#2b2a2a;
	text-shadow:none;
}
.navbar .nav > li {
	border-left: solid 1px #a7a9a4;
	padding:10px 5px;
}
.navbar .nav > li > a {
  color: #2b2a2a;
  padding: 15px 10px;
	text-shadow:none;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
}
.navbar .nav > li > a:hover {
	background-color:rgb(237,237,236);
	background-color:rgba(237,237,236,0.3);
}
.navbar .nav > li.dropdown > a:hover,
.navbar .nav > li.dropdown:hover > a {
  background-color:rgb(237,237,236);
}
ul.nav li.dropdown:hover > ul.dropdown-menu {
  display: block;
	margin:-12px 0 0 5px;
	border-color:rgb(237,237,236);
	border-width:0;
	border-top-width:3px;	
	-webkit-border-radius: 0px;
	-webkit-border-bottom-right-radius: 2px;
	-webkit-border-bottom-left-radius: 2px;
	-moz-border-radius: 0px;
	-moz-border-radius-bottomright: 2px;
	-moz-border-radius-bottomleft: 2px;
	border-radius: 0px;
	border-bottom-right-radius: 2px;
	border-bottom-left-radius: 2px;
	-webkit-box-shadow: 0px 3px 3px rgba(50, 50, 50, 0.35);
	-moz-box-shadow:    0px 3px 3px rgba(50, 50, 50, 0.35);
	box-shadow:         0px 3px 3px rgba(50, 50, 50, 0.35);
}
.navbar .nav > li > .dropdown-menu:before,
.navbar .nav > li > .dropdown-menu:after {
	display:none;
}
.dropdown-menu > li > a {
	padding: 3px 10px;
}
.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus,
.dropdown-submenu:hover > a,
.dropdown-submenu:focus > a {
	color:#2B2A2A;
	background-color:rgb(237,237,236);
	background-image:none;
	filter:none;
}

.page-header {
	margin-bottom:10px;
}

footer {
  background-color: #edeeec;
  padding: 20px 20px 20px;
  /*margin: 15px -20px -20px;*/
  border-top: solid 10px #caccc7;
	font-size:12px;
}
footer a,
footer a:hover {
	color: #333333;
	border-bottom: dotted 1px #333333;
	text-decoration:none;
}
footer a:hover {
	border-bottom:solid 1px #333333;
}

.nav-logo img {
  margin-top: -4px;
  margin-right: -4px;
}

.sections ul {
        margin-left: 0px;
        list-style: none;
        }
div.section-left {
  float: left;
  }
.sections > div {
  width: 380px;
  padding: 10px;
  }
div.section-right {
  float: right;
  }


.summary dd, .summary dt {
  display: inline-block;
	font-weight:normal;
  }
.summary dd {
  margin-left: 2px;
  margin-right: 20px;
}
.summary dd , .summary td.amount  {
  color: white;
  background: #2c2c2c;
  text-align:center;
  padding: 4px 2px 1px 4px;
  border-radius: 2px;
	font-size:21px;
	font-family: 'BebasNeueRegular',Arial,Helvetica,sans-serif;
	letter-spacing:2px;
  }
.summary td.key {
  width: 250px;
  }
.summary td{
  margin-bottom: 5px;
  }
	
.featured.summary {
	 margin-top:30px;
}
.featured.summary dt {
	font-size:20px;
	font-family: 'BebasNeueRegular',Arial,Helvetica,sans-serif;
	letter-spacing:1px;
	font-weight:normal;
}
.featured.summary dd {
	font-size:26px;
	line-height:28px;
}


.input-prepend {
  float: left;
  margin-top: 12px;}

#spacer {
  clear: both;
  }
	

/* Home Page */
/* ========= */
	
.dashboard {
  position: relative;
}
.dashboard,
.dashboard:before,
.dashboard:after {
	background-color: #caccc7;
	background-image: url(stripes.png);
	background-repeat: repeat;
	background-position: center 2px;
	border-bottom:solid 10px #2b2a2a;
}
.dashboard:before,
.dashboard:after {
  content: "";
  position: absolute;
  top: 0;
  bottom: -10px;
  width: 9999px;   /* some huge width */
} 
.dashboard:before {
   right: 100%;
	 background-position: right 2px;
}
/* ... */

